--- a/module2-solution/css-file/module2-css.css
+++ b/module2-solution/css-file/module2-css.css
@@ -1,187 +1,171 @@
 
-	
+	body{
+	margin: 0px;
+
+	}
 	*{
 		box-sizing: border-box;
 	}
 	#menu{
+
 		text-align: center;
-		margin-top: 20px;
+		margin-top: 30px;
 		font-weight: bold;
-		font-size: 30px;
+		font-size: 40px;
 		font-style: italic;
+		color: blue;
 		
 	}
 	#Chicken{
+		direction: rtl;
 		display: inline-block;
 		border:2px solid black;
-		margin-top: 40px;
 		width: 500px;
 		height: auto;
 		background-color: gray;
-		padding-left:10px;
-		padding-bottom: 10px;
-		margin-left: 20px;
 		position: relative;
 		overflow: hidden;
-
+	
 	}
 	#Chicken-text{
-		
-		padding-top: 10px;
+		padding-left: 10px;
+		padding-right: 10px;
+		direction: ltr;
 		font-size: 20px
-
+		
 	}
 	.Chicken{
-
+		display: inline;
 		direction: rtl;
 		border: 2px solid black;
 		background-color: #ffff00;
-		padding-right: 20px;
-		margin-left: 350px;
 		font-size: 30px;
 		font-weight: bold;
+		padding: 5px;
+	
 	}
 	#beef{
+		direction: rtl;
 		display: inline-block;
 		border:2px solid black;
-		margin-top: 20px;
 		width: 500px;
 		height: auto;
 		background-color: gray;
-		padding-left:10px;
-		padding-bottom: 10px;
-		margin-left: 20px;
 		position: relative;
 		overflow: hidden;
+		
 
 	}
 	#beef-text{
-		
-		padding-top: 10px;
+		padding-left: 10px;
+		padding-right: 10px;
+		direction: ltr;
 		font-size: 20px
-
+		
 	}
 	.beef{
-
+		display: inline;
 		direction: rtl;
 		border: 2px solid black;
 		background-color: #8b0000;
-		padding-right: 20px;
-		margin-left: 350px;
 		font-size: 30px;
 		font-weight: bold;
+		padding: 5px;
+	
 	}
 	#sushi{
+		direction: rtl;
 		display: inline-block;
 		border:2px solid black;
-		margin-top: 20px;
 		width: 500px;
 		height: auto;
 		background-color: gray;
-		padding-left:10px;
-		padding-bottom: 10px;
-		margin-left: 20px;
 		position: relative;
 		overflow: hidden;
-
+		
 	}
 	#sushi-text{
-		
-		padding-top: 10px;
-		font-size: 20px
-
+		padding-left: 10px;
+		padding-right: 10px;
+		direction: ltr;
+		font-size: 20px;
+	
 	}
 	.sushi{
-
-		direction: rtl;
+		display: inline;
 		border: 2px solid black;
 		background-color: #adff2f;
-		padding-right: 20px;
-		margin-left: 350px;
 		font-size: 30px;
 		font-weight: bold;
+		padding: 5px;
+	
+
 	}
 
-	@media (min-width: 992px) and (max-width: 1200px) {
+	@media (min-width: 992px) and (max-width: 20000px) {
+		
+			#Chicken{
+	 		width: 30%;
+	 		margin: 1.5%;
+	 		
+	 	}
+
+	 		#beef{
+	 		width: 30%;
+	 		margin: 1.5%;
+	 	}
+
 		#sushi{
-	 		width: 80%;
-	 		margin-left: 10%;
+	 		width: 30%;
+			margin: 1.5%;
 	 	}
-	 	.sushi{
-	 		margin-left: 85%;
-	 		text-align: center;
-	 	}
-	 	#Chicken{
-	 		width: 80%;
-	 		margin-left: 10%;
-	 	}
-	 	.Chicken{
-	 		margin-left: 80	%;
-	 		text-align: center;
-	 	}
-	 	#beef{
-	 		width: 80%;
-	 		margin-left: 10%;
-	 	}
-	 	.beef{
-	 		margin-left: 85%;
-	 		text-align: center;
-	 	}
+	 
+	 
+	 
+	 
+	 	
 	}
 	 @media (min-width: 768px) and (max-width: 991px){
 	
-	 	#sushi{
-	 		width: 95%;
-
+		#Chicken{
+	 		width: 46.5%;
+	 		margin: 1.5%;
 	 	}
-	 	.sushi{
-	 		margin-left: 85%;
-	 		text-align: center;
-	 	}
-	 	#Chicken{
-	 		width: 46%;
-	 	}
-	 	.Chicken{
-	 		margin-left: 60%;
-	 		text-align: center;
-	 	}
+	 	
 	 	#beef{
-	 		width: 46%;
+	 		width: 46.5%;
+	 		margin: 1.5%;
 	 	}
-	 	.beef{
-	 		margin-left: 65%;
-	 		text-align: center;
+
+	 	#sushi{
+	 		width: 96%;
+	 		margin: 1.5%;
 	 	}
+	 
+
+	 	
 	 }
  @media (max-width: 767px){
- 	#sushi{
- 		display: block;
- 		width: 80%;
- 
- 		margin-left: 10%;
+ 		#Chicken{
+ 		
+ 		width: 95%;
+ 		margin: 2%;
+ 	}
 
- 	}
- 		.sushi{
-	 		margin-left: 65%;
-	 		text-align: center;
-	 	}
  	#beef{
- 		display: block;
- 		width:80%;
- 		margin-left: 10%;
+ 		
+ 		width:95%;
+ 		margin: 2%;
  	}
- 	.beef{
-	 		margin-left: 65%;
-	 		text-align: center;
-	 	}
- 	#Chicken{
- 		display: block;
- 		width: 80%;
- 		margin-left: 10%;
+ 	
+ 
+ 	#sushi{
+ 		
+ 		width: 95%;
+ 	
+ 		margin: 2%;
  	}
- 	.Chicken{
-	 		margin-left: 60%;
-	 		text-align: center;
-	 	}
+ 		
+ 	
 
  }
